--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
   background-repeat:no-repeat;
 }
 
+/* Code copied from W3 Schools */
 .topnav {
   background-color: #262730;
   overflow: hidden;
@@ -15,9 +16,10 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   font-family:Arial;
   text-transform: uppercase;
+  max-width:100%;
 }
 
 /* Change the color of links on hover */
@@ -31,10 +33,12 @@ body {
 	position:relative;
 	font-size:50px;
 	padding-top:25px;
+	top: 250px;
 }
 
 ul{
 	font-size:20px;
+	list-style-position: inside;
 }
 
 p{
@@ -42,5 +46,33 @@ p{
 }
 
 a{
+	font-size:35px;
+}
+
+.el_center{
+	position:relative;
+	text-align:center;
+}
+
+h1{
+	text-transform:uppercase;
+	font-family: Impact;
+	font-size: 50px;
+}
+
+h2{
+	text-transform:uppercase;
+	font-size: 30px;
+}
+
+th{
+	font-size:20px;	
+}
+
+td{
 	font-size:20px;
+}
+
+td li{
+	list-style-type: square;
 }
