--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@ body {
 .topnav {
   background-color: #262730;
   overflow: hidden;
+  padding:0px;
+  margin:0px;	
 }
 
 /* Style the links inside the navigation bar */
