--- a/myMeta.css
+++ b/myMeta.css
@@ -24,11 +24,19 @@ mei-filedesc > mei-titlestmt> mei-respstmt > mei-persname[role="encoder"]::befor
   text-align: center;
   margin-top: 2em;
 }
+
 mei-filedesc > mei-pubstmt> mei-respstmt > mei-corpname::before {
  text-align: center;
   content: '\a'"Corpname: ";
   white-space: pre;
 }
+
+mei-filedesc > mei-pubstmt> mei-respstmt > mei-yearpublished::before {
+ text-align: center;
+  content: '\a'"Year Published: ";
+  white-space: pre;
+}
+
 mei-filedesc > mei-pubstmt > mei-date::before {
   text-align: center;
   content: '\a'"Date encoded: ";
