--- a/myMeta.css
+++ b/myMeta.css
@@ -8,7 +8,7 @@ mei-filedesc > mei-titlestmt > mei-title {
   color: #000000;
 }
 
-mei-filedesc > mei-titlestmt > mei-album {
+mei-filedesc > mei-titlestmt > mei-album::before {
   text-align: center;
   content: '\a'"Album: ";
   white-space: pre;
